fix spacing on drop down button

--- a/src/App.css
+++ b/src/App.css
@@ -57,6 +57,7 @@
 }
 
 .dropdown:hover .dropdown-content {
+  margin-top: 8px;
   display: block;
 }
 
